<resources>
    <string name="app_name">BasketGroups</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started!</string>
    <string name="intro_text_description">Choose how you want to proceed</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_description_text">Enter your email and password, to register with us.</string>
    <string name="forgot_passwd_description_text">Enter your email to reset your password.</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>
    <string name="add_place">Add Basket Place</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recover_password">reset password</string>
    <string name="view_on_map">View on map</string>
    <string name="select_current_location">Select current location</string>
    <string name="schedule_yourself">Schedule yourself</string>
    <string name="notifications">Notifications</string>


</resources>