<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_place_details_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.PopupOverlay"
            app:title="testTitle" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_place_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/detail_screen_image_placeholder" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_notifications"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/notifications"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="Title" />


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:rating="0"
        android:numStars="5"
        android:stepSize="1"
        android:contentDescription="Rating Bar"/>

    <TextView
        android:id="@+id/tv_average_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="0.0" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <android.widget.Button
                android:id="@+id/btn_location"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@android:color/white"
                android:text="@string/view_on_map"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center"
                android:textSize="14sp" />

            <android.widget.Button
                android:id="@+id/btn_schedule"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@android:color/white"
                android:text="@string/schedule_yourself"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center"
                android:textSize="14sp" />

            <android.widget.Button
                android:id="@+id/btn_view_calendar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/shape_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@android:color/white"
                android:text="View Calendar"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center"
                android:textSize="14sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_current_players_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="Current Players" />

            <ImageView
                android:id="@+id/icon_drawable"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_nav_user" />

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_current_players_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_scheduled_players_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="Scheduled Players" />

            <ImageView
                android:id="@+id/icon_drawable_scheduled"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_nav_user" />

            <TextView
                android:id="@+id/tv_number_scheduled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_scheduled_players_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp" />

        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>